tests/valid/gh137_helper_1.m
:- module gh137_helper_1.
:- interface.

:- type var_id_set.

:- implementation.

:- type var_id_set == int.
