tests/invalid/parent2.child.m
% This is part of the test_nested.m test case.

:- module parent2:child.
:- interface.

:- type foo.

:- implementation.

:- type foo == int.
